objects/PRM_UserMigration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Field Label MUST be technical name of a field in User Object.</description>
    <fields>
        <fullName>Country_c__c</fullName>
        <label>Country__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyIsoCode__c</fullName>
        <description>Should be like</description>
        <label>CurrencyIsoCode</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailEncodingKey__c</fullName>
        <defaultValue>&apos;ISO-8859-1&apos;</defaultValue>
        <label>EmailEncodingKey</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LanguageLocaleKey__c</fullName>
        <label>LanguageLocaleKey</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocaleSidKey__c</fullName>
        <label>LocaleSidKey</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeZoneSidKey__c</fullName>
        <label>TimeZoneSidKey</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>PRM_UserMigration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country_c__c</columns>
        <columns>LanguageLocaleKey__c</columns>
        <columns>EmailEncodingKey__c</columns>
        <columns>TimeZoneSidKey__c</columns>
        <columns>LocaleSidKey__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>